--- a/index.html
+++ b/index.html
@@ -426,7 +426,7 @@
         <!-- Footer -->
         <footer class="text-center mt-12 py-6">
             <p class="text-slate-500 text-sm">
-                © 2024 色彩測量科學整合分析報告
+                © 2025 ColorGeek色彩測量科學報告
             </p>
         </footer>
     </div>
@@ -575,5 +575,6 @@
     </script>
 </body>
 </html>
+
 
 
